--- a/account.html
+++ b/account.html
@@ -1,88 +1,74 @@
 <!DOCTYPE html>
-<html lang="bn">
+<html>
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>মাই একাউন্ট</title>
+<title>My Account</title>
 
 <style>
-body{margin:0;font-family:Arial;background:#f1f1f1;padding-bottom:70px;}
-.container{max-width:400px;margin:30px auto;background:white;padding:20px;border-radius:12px;box-shadow:0 3px 12px rgba(0,0,0,0.1);}
-input{width:100%;padding:10px;margin:8px 0;border-radius:6px;border:1px solid #ccc;}
-button{width:100%;padding:10px;border:none;border-radius:6px;background:#ff6a00;color:white;font-weight:bold;margin-top:8px;}
-.logout{background:red;}
-
-.bottom-nav{
-position:fixed;
-bottom:0;
-left:0;
-right:0;
-background:#0d1b2a;
-display:flex;
-justify-content:space-around;
-padding:8px 0;
+body{font-family:Arial;background:#f2f2f2;padding:10px;}
+.box{background:#fff;padding:15px;border-radius:12px;}
+input,textarea{
+width:100%;
+padding:8px;
+margin-bottom:10px;
+border-radius:6px;
+border:1px solid #ccc;
 }
-
-.bottom-nav a{
-color:white;
-text-decoration:none;
-font-size:13px;
-text-align:center;
+button{
+background:#00c853;
+color:#fff;
+padding:10px;
+border:none;
+width:100%;
+border-radius:8px;
 }
 </style>
 </head>
-
 <body>
 
-<div class="container" id="accountBox">
-<h2>মাই একাউন্ট</h2>
-<input type="text" id="name" placeholder="আপনার নাম">
-<input type="text" id="phone" placeholder="মোবাইল নাম্বার">
-<input type="text" id="address" placeholder="আপনার ঠিকানা">
-<button onclick="saveAccount()">সেভ করুন</button>
-</div>
+<h2>My Account</h2>
 
-<div class="bottom-nav">
-<a href="index.html">🏠<br>Home</a>
-<a href="#">📂<br>Category</a>
-<a href="#">🛒<br>Orders</a>
-<a href="account.html">👤<br>Account</a>
+<div class="box">
+<form id="accountForm">
+<input type="text" id="name" placeholder="নাম" required>
+<input type="text" id="phone" placeholder="মোবাইল নম্বর" required>
+<input type="text" id="whatsapp" placeholder="হোয়াটসঅ্যাপ নম্বর">
+<input type="text" id="altphone" placeholder="বিকল্প নম্বর">
+<input type="number" id="age" placeholder="বয়স">
+<textarea id="address" placeholder="সম্পূর্ণ ঠিকানা" required></textarea>
+
+<button type="submit">Save Information</button>
+</form>
 </div>
 
 <script>
-
-window.onload=function(){
-const user=JSON.parse(localStorage.getItem("userData"));
-if(user){
-document.getElementById("accountBox").innerHTML=`
-<h2>স্বাগতম, ${user.name}</h2>
-<p><b>মোবাইল:</b> ${user.phone}</p>
-<p><b>ঠিকানা:</b> ${user.address}</p>
-<button onclick="logout()" class="logout">লগআউট</button>
-`;
-}
+let saved=JSON.parse(localStorage.getItem("user"));
+if(saved){
+name.value=saved.name;
+phone.value=saved.phone;
+whatsapp.value=saved.whatsapp;
+altphone.value=saved.altphone;
+age.value=saved.age;
+address.value=saved.address;
 }
 
-function saveAccount(){
-const name=document.getElementById("name").value;
-const phone=document.getElementById("phone").value;
-const address=document.getElementById("address").value;
+document.getElementById("accountForm").onsubmit=function(e){
+e.preventDefault();
 
-if(!name||!phone||!address){
-alert("সব তথ্য পূরণ করুন");
-return;
+let user={
+name:name.value,
+phone:phone.value,
+whatsapp:whatsapp.value,
+altphone:altphone.value,
+age:age.value,
+address:address.value
+};
+
+localStorage.setItem("user",JSON.stringify(user));
+alert("Saved Successfully");
+window.location="checkout.html";
 }
-
-localStorage.setItem("userData",JSON.stringify({name,phone,address}));
-alert("সেভ হয়েছে ✅");
-location.reload();
-}
-
-function logout(){
-localStorage.removeItem("userData");
-location.reload();
-}
-
 </script>
 
 </body>
