--- a/orders.html
+++ b/orders.html
@@ -4,42 +4,63 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>My Orders</title>
+
 <style>
-body{font-family:Arial;background:#f4f4f4;margin:0;padding:10px;}
-.order-box{background:white;padding:15px;border-radius:10px;margin-bottom:10px;}
-.cancel-btn{background:red;color:white;border:none;padding:6px 10px;border-radius:6px;margin-top:10px;}
+body{font-family:Arial;background:#f2f2f2;padding:10px;padding-bottom:70px;}
+.card{
+background:#fff;
+padding:15px;
+border-radius:12px;
+margin-bottom:15px;
+box-shadow:0 3px 10px rgba(0,0,0,0.1);
+}
+.bottom-nav{
+position:fixed;
+bottom:0;
+left:0;
+width:100%;
+background:#fff;
+display:flex;
+justify-content:space-around;
+padding:10px 0;
+box-shadow:0 -2px 10px rgba(0,0,0,0.1);
+}
+.bottom-nav a{text-decoration:none;color:#000;}
 </style>
 </head>
 <body>
 
 <h2>My Orders</h2>
+<div id="orderList"></div>
 
-<div id="orders"></div>
+<div class="bottom-nav">
+<a href="index.html">Home</a>
+<a href="cart.html">Cart</a>
+<a href="orders.html">Orders</a>
+<a href="account.html">My Account</a>
+</div>
 
 <script>
+let orders=JSON.parse(localStorage.getItem("orders"))||[];
+let div=document.getElementById("orderList");
 
-let order=JSON.parse(localStorage.getItem("lastOrder"));
-
-if(order){
-document.getElementById("orders").innerHTML=`
-<div class="order-box">
-<b>Order ID:</b> ${order.orderId}<br><br>
-<pre>${order.products}</pre>
-<b>Total:</b> ৳${order.total}<br>
-<b>Status:</b> ${order.status}<br>
-<button class="cancel-btn" onclick="cancelOrder()">Cancel Order</button>
-</div>
-`;
-}else{
-document.getElementById("orders").innerHTML="No Orders Found";
+if(orders.length===0){
+div.innerHTML="<p>No Orders Yet</p>";
 }
 
-function cancelOrder(){
-localStorage.removeItem("lastOrder");
-alert("Order Cancelled");
-location.reload();
-}
+orders.reverse().forEach(order=>{
+let products="";
+order.products.forEach(p=>{
+products+=`${p.name} - ৳${p.newprice}<br>`;
+});
 
+div.innerHTML+=`
+<div class="card">
+<b>📅 ${order.date}</b><br><br>
+${products}
+<b>মোট:</b> ৳${order.total}
+</div>`;
+});
 </script>
 
 </body>
