--- a/product.html
+++ b/product.html
@@ -3,180 +3,53 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Product - Shahin Tech BD</title>
+<title>Product</title>
 
 <style>
-body{
-margin:0;
-font-family:Arial;
-background:#f4f4f4;
-padding-bottom:120px;
-}
-
-.product-box{
-background:white;
+body{font-family:Arial;background:#f2f2f2;padding:10px;}
+.card{
+background:#fff;
 padding:15px;
-}
-
-.product-box img{
-width:100%;
-height:220px;
-object-fit:cover;
 border-radius:12px;
+box-shadow:0 3px 10px rgba(0,0,0,0.1);
 }
-
-.product-box h2{
-margin:10px 0 5px;
-}
-
-.price{
-color:#ff512f;
-font-size:22px;
-font-weight:bold;
-}
-
-.old{
-text-decoration:line-through;
-color:gray;
-font-size:14px;
-}
-
-.qty{
-display:flex;
-justify-content:center;
-align-items:center;
-gap:15px;
-margin:15px 0;
-}
-
-.qty button{
-padding:6px 15px;
-font-size:18px;
-border:none;
-background:#ff512f;
-color:white;
-border-radius:6px;
-}
-
-.qty span{
-font-size:20px;
-font-weight:bold;
-}
-
-.bottom-bar{
-position:fixed;
-bottom:0;
-left:0;
-right:0;
-background:white;
+img{width:100%;border-radius:10px;}
+button{
+background:#000;
+color:#fff;
 padding:10px;
-display:flex;
-gap:10px;
-box-shadow:0 -3px 10px rgba(0,0,0,0.2);
-}
-
-.cart-btn{
-flex:1;
-background:#222;
-color:white;
 border:none;
-padding:12px;
-border-radius:6px;
-}
-
-.buy-btn{
-flex:1;
-background:#ff512f;
-color:white;
-border:none;
-padding:12px;
-border-radius:6px;
+width:100%;
+border-radius:8px;
+margin-top:10px;
 }
 </style>
 </head>
-
 <body>
 
-<div class="product-box" id="productDetails"></div>
-
-<div class="qty">
-<button onclick="decrease()">-</button>
-<span id="quantity">1</span>
-<button onclick="increase()">+</button>
-</div>
-
-<div class="bottom-bar">
-<button class="cart-btn" onclick="addToCart()">Add to Cart</button>
-<button class="buy-btn" onclick="buyNow()">Buy Now</button>
-</div>
+<div class="card" id="productBox"></div>
 
 <script>
+let product=JSON.parse(localStorage.getItem("singleProduct"));
 
-const SHEET_URL="https://opensheet.elk.sh/1wrf-8XMPQ1xTcGUqQ20QxZI6dWvO-Osnp0Nd0FWS1wQ/Products";
-
-let productData;
-let quantity=1;
-
-const params=new URLSearchParams(window.location.search);
-const productId=params.get("id");
-
-fetch(SHEET_URL)
-.then(res=>res.json())
-.then(data=>{
-productData=data.find(p=>p.id==productId);
-showProduct();
-});
-
-function showProduct(){
-document.getElementById("productDetails").innerHTML=`
-<img src="${productData.image}" onerror="this.src='https://via.placeholder.com/300x200'">
-<h2>${productData.name}</h2>
-<div class="old">৳${productData.oldprice}</div>
-<div class="price">৳${productData.price}</div>
-<p>${productData.description}</p>
+if(!product){
+document.getElementById("productBox").innerHTML="<p>No Product Selected</p>";
+}else{
+document.getElementById("productBox").innerHTML=`
+<img src="${product.image}">
+<h3>${product.name}</h3>
+<p>৳${product.newprice}</p>
+<p style="text-decoration:line-through;color:gray;">৳${product.oldprice}</p>
+<button onclick="addToCart()">Add to Cart</button>
 `;
 }
 
-function increase(){
-quantity++;
-document.getElementById("quantity").innerText=quantity;
-}
-
-function decrease(){
-if(quantity>1){
-quantity--;
-document.getElementById("quantity").innerText=quantity;
-}
-}
-
 function addToCart(){
-
 let cart=JSON.parse(localStorage.getItem("cart"))||[];
-
-let existing=cart.find(item=>item.id==productData.id);
-
-if(existing){
-existing.quantity+=quantity;
-}else{
-cart.push({
-id:productData.id,
-name:productData.name,
-price:productData.price,
-image:productData.image,
-quantity:quantity
-});
-}
-
+cart.push(product);
 localStorage.setItem("cart",JSON.stringify(cart));
-
-alert("Added to Cart ✅");
+alert("Added to Cart");
 }
-
-function buyNow(){
-addToCart();
-window.location.href="cart.html";
-}
-
 </script>
 
 </body>
