--- a/checkout.html
+++ b/checkout.html
@@ -6,43 +6,80 @@
 <title>Checkout</title>
 
 <style>
-body{font-family:Arial;background:#f2f2f2;padding:10px;padding-bottom:80px;}
-.box{background:#fff;padding:15px;border-radius:12px;margin-bottom:15px;}
-.product{display:flex;gap:10px;margin-bottom:10px;}
-.product img{width:60px;border-radius:6px;}
-.total-box{background:#fff3e0;padding:10px;border-radius:10px;}
+body{
+font-family:Arial;
+background:#f2f2f2;
+padding:10px;
+padding-bottom:100px;
+}
+
+.card{
+background:#fff;
+padding:15px;
+border-radius:15px;
+margin-bottom:15px;
+box-shadow:0 4px 12px rgba(0,0,0,0.1);
+}
+
+.product{
+display:flex;
+gap:10px;
+margin-bottom:10px;
+}
+
+.product img{
+width:70px;
+border-radius:8px;
+}
+
+.total-box{
+background:#fff3e0;
+padding:12px;
+border-radius:12px;
+margin-top:10px;
+}
+
+select{
+width:100%;
+padding:10px;
+border-radius:8px;
+margin-top:5px;
+}
+
 button{
 background:#ff3d00;
 color:#fff;
-padding:12px;
+padding:14px;
 border:none;
 width:100%;
-border-radius:8px;
+border-radius:10px;
 font-size:16px;
+margin-top:15px;
 }
 </style>
 </head>
+
 <body>
 
 <h2>Checkout</h2>
 
-<div class="box" id="userBox"></div>
+<div class="card" id="userBox"></div>
 
-<div class="box">
-<h3>Products</h3>
+<div class="card">
+<h3>Order Summary</h3>
 <div id="productList"></div>
 </div>
 
-<div class="box">
+<div class="card">
 <h3>Delivery Option</h3>
 
-<select id="delivery" onchange="updateTotal()" style="width:100%;padding:8px;border-radius:6px;">
-<option value="50">জলঢাকা উপজেলার ভিতরে - ৫০ টাকা</option>
-<option value="80">নীলফামারী জেলার মধ্যে - ৮০ টাকা</option>
-<option value="120">সারাদেশে - ১২০ টাকা</option>
+<select id="delivery" onchange="updateTotal()">
+<option value="50">উপজেলার ভিতরে - ৳50</option>
+<option value="80">জেলার মধ্যে - ৳80</option>
+<option value="120">সারাদেশে - ৳120</option>
 </select>
 
-<div class="total-box" style="margin-top:10px;">
+<div class="total-box">
 <p>Subtotal: ৳<span id="subtotal">0</span></p>
 <p>Delivery: ৳<span id="deliveryCharge">50</span></p>
 <h3>Grand Total: ৳<span id="grandTotal">0</span></h3>
@@ -53,29 +90,47 @@ font-size:16px;
 <button onclick="confirmOrder()">Confirm Order</button>
 
 <script>
+
 let user=JSON.parse(localStorage.getItem("user"));
+
 if(!user){
+alert("প্রথমে আপনার তথ্য পূরণ করুন");
 window.location="account.html";
 }
 
 document.getElementById("userBox").innerHTML=`
 <b>${user.name}</b><br>
-${user.phone}<br>
-${user.address}
+📞 ${user.phone}<br>
+${user.whatsapp ? "WhatsApp: "+user.whatsapp+"<br>" : ""}
+${user.altphone ? "Alt: "+user.altphone+"<br>" : ""}
+📍 ${user.address}, ${user.upazila}, ${user.district}
 `;
 
+let buyNow=JSON.parse(localStorage.getItem("buyNowProduct"));
 let cart=JSON.parse(localStorage.getItem("cart"))||[];
+
+let products=[];
+if(buyNow){
+products=[buyNow];
+localStorage.removeItem("buyNowProduct");
+}else{
+products=cart;
+}
+
 let subtotal=0;
 let list=document.getElementById("productList");
 
-cart.forEach(item=>{
-subtotal+=Number(item.newprice);
+products.forEach(p=>{
+let totalPrice=p.newprice * p.qty;
+subtotal+=totalPrice;
+
 list.innerHTML+=`
 <div class="product">
-<img src="${item.image}">
+<img src="${p.image}">
 <div>
-${item.name}<br>
-৳${item.newprice}
+<b>${p.name}</b><br>
+Qty: ${p.qty}<br>
+৳${p.newprice} × ${p.qty} = ৳${totalPrice}
 </div>
 </div>`;
 });
@@ -91,15 +146,27 @@ document.getElementById("grandTotal").innerText=subtotal+delivery;
 updateTotal();
 
 function confirmOrder(){
-let delivery=Number(document.getElementById("delivery").value);
-let grand=subtotal+delivery;
 
-localStorage.setItem("grandTotal",grand);
-localStorage.setItem("lastOrder",JSON.stringify(cart));
+let delivery=Number(document.getElementById("delivery").value);
+let grandTotal=subtotal+delivery;
+
+let orders=JSON.parse(localStorage.getItem("orders"))||[];
+
+orders.push({
+user:user,
+products:products,
+subtotal:subtotal,
+delivery:delivery,
+total:grandTotal,
+date:new Date().toLocaleString()
+});
+
+localStorage.setItem("orders",JSON.stringify(orders));
 localStorage.removeItem("cart");
 
 window.location="payment.html";
 }
+
 </script>
 
 </body>
