--- a/index.html
+++ b/index.html
@@ -8,40 +8,72 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
 <style>
-body{margin:0;font-family:Arial;background:#f2f2f2;padding-bottom:80px;}
+body{
+margin:0;
+font-family:Arial;
+background:#f4f4f4;
+padding-bottom:90px;
+}
 
+/* HEADER */
 header{
+background:#111;
+color:#fff;
+padding:12px 15px;
 display:flex;
 justify-content:space-between;
 align-items:center;
-background:#111;
-padding:12px 15px;
-color:#fff;
-position:sticky;
-top:0;
-z-index:1000;
 }
 
 .logo{
+color:#00e676;
 font-size:18px;
 font-weight:bold;
-color:#00e676;
 }
 
-.support-icons a{
+.icons a{
+color:white;
 margin-left:15px;
-font-size:22px;
+font-size:20px;
+}
+
+/* SEARCH */
+.search-box{
+padding:10px;
+background:white;
+}
+
+.search-box input{
+width:100%;
+padding:10px;
+border-radius:8px;
+border:1px solid #ccc;
+}
+
+/* CATEGORY */
+.categories{
+display:flex;
+overflow-x:auto;
+gap:10px;
+padding:10px;
+background:#fff;
+}
+
+.cat-btn{
+padding:6px 12px;
+background:#eee;
+border-radius:20px;
+white-space:nowrap;
+cursor:pointer;
+font-size:13px;
+}
+
+.cat-btn.active{
+background:#ff3d00;
 color:white;
 }
 
-.banner{
-background:#ff3d00;
-color:#fff;
-text-align:center;
-padding:8px;
-font-weight:bold;
-}
-
+/* PRODUCTS */
 .products{
 display:grid;
 grid-template-columns:repeat(2,1fr);
@@ -50,43 +82,70 @@ padding:10px;
 }
 
 .card{
-background:#fff;
+background:white;
 border-radius:12px;
-box-shadow:0 4px 10px rgba(0,0,0,0.1);
 padding:10px;
+box-shadow:0 4px 10px rgba(0,0,0,0.08);
 }
 
-.card img{width:100%;border-radius:8px;}
+.card img{
+width:100%;
+border-radius:8px;
+}
 
-.price{color:#e91e63;font-weight:bold;}
+.old-price{
+text-decoration:line-through;
+color:gray;
+font-size:13px;
+}
 
-.btn{
-background:#000;
-color:#fff;
-padding:6px;
-text-align:center;
+.new-price{
+color:#e91e63;
+font-weight:bold;
+}
+
+.discount{
+background:#e91e63;
+color:white;
+font-size:11px;
+padding:2px 6px;
 border-radius:6px;
-margin-top:5px;
+display:inline-block;
+margin-top:4px;
+}
+
+.buy-btn{
+background:#000;
+color:white;
+text-align:center;
+padding:7px;
+border-radius:6px;
+margin-top:6px;
 cursor:pointer;
 }
 
+/* BOTTOM NAV */
 .bottom-nav{
 position:fixed;
 bottom:0;
 left:0;
 width:100%;
-background:#fff;
+background:linear-gradient(90deg,#ff3d00,#ff9100);
 display:flex;
 justify-content:space-around;
-padding:12px 0;
-box-shadow:0 -2px 10px rgba(0,0,0,0.2);
-z-index:2000;
+padding:10px 0;
 }
 
 .bottom-nav a{
+color:white;
 text-decoration:none;
-color:#111;
-font-size:14px;
+font-size:13px;
+text-align:center;
+}
+
+.bottom-nav i{
+display:block;
+font-size:18px;
 }
 </style>
 </head>
@@ -95,64 +154,93 @@ font-size:14px;
 
 <header>
 <div class="logo">Shahin Tech BD</div>
-<div class="support-icons">
+<div class="icons">
 <a href="https://wa.me/8801777127628"><i class="fab fa-whatsapp" style="color:#25D366"></i></a>
-<a href="#"><i class="fab fa-telegram" style="color:#0088cc"></i></a>
+<a href="https://t.me/shahintechbd_bot"><i class="fab fa-telegram" style="color:#0088cc"></i></a>
 </div>
 </header>
 
-<div class="banner">🔥 ধামাকা অফার চলছে 🔥</div>
+<div class="search-box">
+<input type="text" id="searchInput" placeholder="Search product...">
+</div>
+
+<div class="categories" id="categoryBar">
+<div class="cat-btn active" onclick="filterCategory('All',this)">All</div>
+<div class="cat-btn" onclick="filterCategory('Wall',this)">Wall</div>
+<div class="cat-btn" onclick="filterCategory('Mobile Accessories',this)">Mobile Accessories</div>
+<div class="cat-btn" onclick="filterCategory('Electrical',this)">Electrical</div>
+<div class="cat-btn" onclick="filterCategory('Lighting',this)">Lighting</div>
+<div class="cat-btn" onclick="filterCategory('Offer',this)">Offer</div>
+</div>
 
 <div class="products" id="products"></div>
 
 <div class="bottom-nav">
-<a href="index.html">Home</a>
-<a href="cart.html">Cart</a>
-<a href="orders.html">Orders</a>
-<a href="account.html">My Account</a>
+<a href="index.html"><i class="fa fa-home"></i>Home</a>
+<a href="cart.html"><i class="fa fa-shopping-cart"></i>Cart</a>
+<a href="orders.html"><i class="fa fa-box"></i>Orders</a>
+<a href="account.html"><i class="fa fa-user"></i>Account</a>
 </div>
 
 <script>
+
 const API="https://script.google.com/macros/s/AKfycbzOkxgutucJ1fsLTLCHAOjCD3UqzoiYNJKmM1UM32aQZqgy1HZOqlSQvixPu2IZaJv3/exec";
+
+let allProducts=[];
+let currentCategory="All";
 
 fetch(API)
 .then(res=>res.json())
 .then(data=>{
-let show=data.filter(p=>p.status==="show");
+allProducts=data.filter(p=>p.status==="show");
+displayProducts(allProducts);
+});
+
+function displayProducts(list){
 let container=document.getElementById("products");
-show.forEach(p=>{
+container.innerHTML="";
+
+list.forEach(p=>{
+let discount=Math.round(((p.oldprice-p.newprice)/p.oldprice)*100);
+
 container.innerHTML+=`
 <div class="card">
 <img src="${p.image}">
 <h4>${p.name}</h4>
-<div class="price">৳${p.newprice}</div>
-
-<div>
-<label>Qty:</label>
-<input type="number" min="1" value="1" id="qty${p.id}" style="width:60px">
-</div>
-
-<div class="btn" onclick='addToCart(${JSON.stringify(p)},${p.id})'>Add to Cart</div>
-<div class="btn" onclick='buyNow(${JSON.stringify(p)},${p.id})'>Buy Now</div>
+<div class="old-price">৳${p.oldprice}</div>
+<div class="new-price">৳${p.newprice}</div>
+<div class="discount">${discount}% OFF</div>
+<div class="buy-btn" onclick='buyNow(${JSON.stringify(p)})'>Buy Now</div>
 </div>`;
 });
-});
-
-function addToCart(p,id){
-let qty=document.getElementById("qty"+id).value;
-p.qty=Number(qty);
-let cart=JSON.parse(localStorage.getItem("cart"))||[];
-cart.push(p);
-localStorage.setItem("cart",JSON.stringify(cart));
-alert("Added to cart");
 }
 
-function buyNow(p,id){
-let qty=document.getElementById("qty"+id).value;
-p.qty=Number(qty);
+function filterCategory(cat,el){
+currentCategory=cat;
+
+document.querySelectorAll(".cat-btn").forEach(btn=>btn.classList.remove("active"));
+el.classList.add("active");
+
+if(cat==="All"){
+displayProducts(allProducts);
+}else{
+displayProducts(allProducts.filter(p=>p.category===cat));
+}
+}
+
+document.getElementById("searchInput").addEventListener("input",function(){
+let value=this.value.toLowerCase();
+let filtered=allProducts.filter(p=>
+p.name.toLowerCase().includes(value)
+);
+displayProducts(filtered);
+});
+
+function buyNow(p){
 localStorage.setItem("buyNowProduct",JSON.stringify(p));
 window.location="checkout.html";
 }
+
 </script>
 
 </body>
